[gd_scene load_steps=2 format=3 uid="uid://hp6c2yxgvlp"]

[ext_resource type="Script" uid="uid://dce4442q4rkm" path="res://scenes/prototypes/tutorial_transition.gd" id="1_vmvsk"]

[node name="TutorialTransition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_vmvsk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TutorialText" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
bbcode_enabled = true
text = "[font_size=36]Tutorial Text Goes here[/font_size]"
fit_content = true
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 36
text = " Continue "

[connection signal="pressed" from="PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
